--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -327,7 +327,8 @@
 
 <div class="content" role="main">
 
-  <h1>Hola {{ nombre }}</h1>
+  <!-- <h1>Hola {{ nombre }}</h1> -->
+  <app-saludo></app-saludo>
 
 </div>
 
