--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -328,7 +328,13 @@
 <div class="content" role="main">
 
   <!-- <h1>Hola {{ nombre }}</h1> -->
-  <app-saludo></app-saludo>
+  <!-- Input para trabajar con ngModel -->
+
+  <input type="text" placeholder="Nombre del usuario" [(ngModel)]="usuario"/>
+  
+  <app-saludo [nombre]="usuario" (mensajeEmitter)="recibirMensajeDelHijo($event)"></app-saludo>
+  <!--cuando utlizamos algo que esta entre corchetes hacemos referencia a lgo que este en el ts-->
+
 
 </div>
 
