--- a/src/app/components/saludo/saludo.component.html
+++ b/src/app/components/saludo/saludo.component.html
@@ -1,1 +1,7 @@
-<h1>hola {{nombre}}</h1>
+<h1>hola {{nombre}} {{apellido}}</h1>
+<h3 [ngClass]="nombre == 'dani' ? 'dani' : 'saludo' " id="usuario" [innerText]="nombre">
+    <!--no indicamos nada en las etiquetas, sino que el valor viene definido por la propiedad-->
+</h3>
+
+
+<button id="emit-alerta" (click)="enviarMensajeAlPadre()">Enivar mensaje de saludo al padre</button>
